Fix too small datepicker icon size; ensure datepicker dropdown items are not truncated under IE; ensure focussed/active dropdown item text is visible in Safari;harmonize vertical alignment of selected dropdown item b/w mobile/desktop viewports

--- a/src/components/20-molecules/datepicker/index.scss
+++ b/src/components/20-molecules/datepicker/index.scss
@@ -67,8 +67,8 @@ axa-datepicker {
 
     svg {
       color: $color-axa-blue;
-      width: 21px;
-      height: 21px;
+      width: 24px;
+      height: 24px;
       padding-right: 6px;
       fill: $color-axa-blue;
     }
